# awesome-discord-bot-with-rust

./: .dockerignore  .gitignore  Dockerfile  README.md  run_bot_and_server.sh
discord_bot/: .env.example  Cargo.toml
discord_bot/src/: main.rs  utils.rs  webscrapper.rs
discord_bot/src/emojis_only/: emojis_channel_manager.rs  mod.rs
discord_bot/src/nlu/: mod.rs  nlu_manager.rs  utils.rs
discord_bot/src/resources/: mod.rs  resource_manager.rs  webscrapper.rs
discord_bot/src/rpg/: bidimensional_array.rs  game_world.rs  mod.rs  rpg_manager.rs  story.rs
new_source/: .env.setup  Cargo.toml
new_source/migrations/2021-06-26-035648_channels/: down.sql  up.sql
new_source/migrations/2021-06-26-035658_resources/: down.sql  up.sql
new_source/src/: lib.rs  schema.rs
new_source/src/models/: channels.rs  mod.rs  resources.rs  types.rs
source/: .env.copy  Cargo.toml  run_bot_and_server.sh
source/src/: bot.rs  main.rs  server.rs
source/src/lib/: app_state.rs  bot_state.rs  cmd_save_resource.rs  cmd_search_resource.rs  cmd_status.rs  cmd_test.rs  custom_database.rs  mod.rs
source/src/lib/commands/: cmd_save_resource.rs  cmd_search_resource.rs  cmd_status.rs  cmd_test.rs  mod.rs
source/src/lib/endpoints/: index.rs  mod.rs  search.rs
source/static/css/: under_construction.css
source/static/js/: under_construction.js
source/templates/: under_construction.html
