[package]
name = "awesome_discord_bot"
version = "0.1.0"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "discord_bot"
path = "src/bin/discord_bot_data/discord_bot.rs"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.126"
serde_json = "1.0"
json = "0.12"
regex = "1"
futures = { version = "0.3.1", features = ["thread-pool"] }


[dependencies.serenity]
default-features = false
version = "0.10.8"
features = ["client", "gateway", "rustls_backend", "model", "http", "cache"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]