[package]
name = "awesome_rust_discord_bot"
version = "0.1.0"
authors = ["Hector Pulido"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "bot"
path = "src/bot.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-openssl = "0.5.0"
postgres = "0.19.1"
postgres-native-tls = "0.5.0"
native-tls = "0.2.7"
openssl = "0.10"
dotenv = "0.15"
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
regex = "1"
lazy_static = "1.4.0"
serde = "1.0.126"
actix-web = "3"
actix-files = "0.5.0"
tera = "1.10.0"